# Automation

PIDControl/: Document.docx  PID.docx
PIDControl/PLC控制V20/: PLC控制V20.ap17  PLC控制V20.info
PIDControl/PLC控制V20/IM/SPL/: options
PIDControl/PLC控制V20/IM/SearchIndex/: _2hg.fdt  _2hg.fdx  _2hg.fnm  _2hg.frq  _2hg.prx  _2hg.tii  _2hg.tis  _2hg.tvd  _2hg.tvf  _2hg.tvx  _2hg_1.del  _2hh.cfs  segments_1p2  segments_1p3
PIDControl/PLC控制V20/System/: PEData.idx  PEData.plf  ~PEData.1
PIDControl/PLC控制V20/XRef/: XRef.db  XRef.db-journal
PIDControl/测量Kp/: 测量Kp.sln
PIDControl/测量Kp/测量Kp/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  packages.config  测量Kp.csproj
PIDControl/测量Kp/测量Kp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
PIDControl/测量基于基准Kp的模型/: 测量基于基准Kp的模型.sln
PIDControl/测量基于基准Kp的模型/测量基于基准Kp的模型/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  测量基于基准Kp的模型.csproj
PIDControl/测量基于基准Kp的模型/测量基于基准Kp的模型/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
PTIDES/: PTIDES.py  README.md  pub2_test.py  pub_test.py  sub_test.py
Screw_Fastening/: README.md
Screw_Fastening/3D_Objects/Button_Box/: 按钮箱.SLDPRT  按钮箱.STL  按钮箱1.SLDPRT  按钮箱1.STL
Screw_Fastening/3D_Objects/Camera_Base/: 转接板.SLDPRT  转接板.STL
Screw_Fastening/3D_Objects/Platform/: 托板.SLDPRT  托板.STL
Screw_Fastening/Cpp_Code/: captureImage.cpp  captureImage.hdev  test.cpp  unnamed.cpp
Screw_Fastening/LF_Code/test/lib/: libreactor-cpp-default.so.0.0.1  libreactor-cpp-default.so.1
Screw_Fastening/LF_Code/test/src/: LibraryImport.cmake  ScrewFastening.lf  math.cpp
Screw_Fastening/LF_Code/test/src-gen/: CMakeLists.txt
Screw_Fastening/LF_Code/test/src-gen/HelloWorld/: CMakeLists.txt  main.cc
Screw_Fastening/LF_Code/test/src-gen/HelloWorld/HelloWorld/: A.cc  A.hh  B.cc  B.hh  HelloWorld.cc  HelloWorld.hh  _lf_preamble.cc  _lf_preamble.hh  automation_control.cc  automation_control.hh  control.cc  control.hh  receiver.cc  receiver.hh  robot.cc  robot.hh  sender.cc  sender.hh  vision.cc  vision.hh
Screw_Fastening/LF_Code/test/src-gen/ScrewFastening/: CMakeLists.txt  main.cc
Screw_Fastening/LF_Code/test/src-gen/ScrewFastening/ScrewFastening/: ScrewFastening.cc  ScrewFastening.hh  _lf_preamble.cc  _lf_preamble.hh  automation_control.cc  automation_control.hh  robot.cc  robot.hh  vision.cc  vision.hh
Screw_Fastening/LF_Code/test/src/Vision/: Image.cpp  Image.h  readme.md  vision.cmake
Screw_Fastening/V90_Control_Platform/project file/v90控制/: v90控制.ap16
Screw_Fastening/V90_Control_Platform/project file/v90控制/IM/SPL/: options
Screw_Fastening/V90_Control_Platform/project file/v90控制/IM/SearchIndex/: _19e.fdt  _19e.fdx  _19e.fnm  _19e.frq  _19e.prx  _19e.tii  _19e.tis  _19e.tvd  _19e.tvf  _19e.tvx  _19e_2.del  (+8 more)
Screw_Fastening/V90_Control_Platform/project file/v90控制/System/: PEData.idx  PEData.plf  ~PEData.1
Screw_Fastening/V90_Control_Platform/project file/v90控制/XRef/: XRef.db
Screw_Fastening/apriltag/: CMakeLists.txt  locate_QRCode.cpp  locate_QRCode.h
